fix(website): Fix layout of toolchain on mobile
Show the toolchain in a column on mobile to not exceed the available
width.

--- a/website/src/components/Toolchain/styles.module.css
+++ b/website/src/components/Toolchain/styles.module.css
@@ -67,3 +67,17 @@
     margin: 0;
 }
 
+@media (max-width: 768px) {
+    .content {
+        padding: 3rem 5%;
+    }
+
+    .tools {
+        flex-direction: column;
+    }
+
+    .arrow {
+        transform: rotate(90deg);
+    }
+}
+
